--- a/current.html
+++ b/current.html
@@ -16,7 +16,7 @@
                 <label for="username">Enter username</label>
                 <input type="text" id="username" autocomplete="off" placeholder="Enter username here" required>
                 <label for="password">Enter password</label>
-                <input type="text" id="password" autocomplete="off" placeholder="Enter password here" required>
+                <input type="password" id="password" autocomplete="off" placeholder="Enter password here" required>
                 <input type="submit" value="Login"></input>
                 </form>
             </div>
